--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,26 @@
 language: python
 
-python: 2.7
+python:
+  - 2.7
+  - 3.5
 
 env:
-    - TOXENV=py27-d10
-    - TOXENV=py35-d10
-    - TOXENV=py27-d11
-    - TOXENV=py35-d11
-    - TOXENV=cov
+  - TOXENV=cov
+
+matrix:
+  include:
+    - python: 2.7
+      env: TOXENV=py27-d10
+    - python: 2.7
+      env: TOXENV=py27-d11
+
+    - python: 3.5
+      env: TOXENV=py35-d10
+    - python: 3.5
+      env: TOXENV=py35-d11
+    - python: 3.5
+      env: TOXENV=py35-d20
+
 
 branches:
     only:
@@ -16,7 +29,9 @@ branches:
 
 install: pip install --quiet tox
 
-script: tox
+
+script: tox -e ${TOXENV}
+
 
 after_script:
     - if [ $TOXENV == "cov" ]; then
